회원탈퇴 기능 작성, 비밀번호 찾기 기능 구현중

--- a/front/src/views/Authentication/sign-in/style.css
+++ b/front/src/views/Authentication/sign-in/style.css
@@ -151,9 +151,9 @@ hr {
   justify-content: center;
   cursor: pointer;
 
-  color: #e6e6e6;
+  color: #f2f2f2;
 
-  background-color: #5136ffca;
+  background-color: #8d8d8d;
 }
 
 .auth-description-link,
